components: play buttons fixed z-index

--- a/src/components/Testimonials.css
+++ b/src/components/Testimonials.css
@@ -102,6 +102,7 @@
     /* position: absolute; */
     color: #fff;
     /* background-color: blue; */
+    z-index: 1000;
     
 }
 .testimonials-section .control-buttons .testimonial-buttons{
